test/asm/multiple-charmaps.err
warning: multiple-charmaps.asm(39) -> multiple-charmaps.asm::print_mapped(27): [-Wnumeric-string]
    Treating 2-character string as a number
warning: multiple-charmaps.asm(47) -> multiple-charmaps.asm::print_mapped(27): [-Wnumeric-string]
    Treating 2-character string as a number
warning: multiple-charmaps.asm(66) -> multiple-charmaps.asm::print_mapped(27): [-Wnumeric-string]
    Treating 2-character string as a number
warning: multiple-charmaps.asm(89) -> multiple-charmaps.asm::print_mapped(27): [-Wnumeric-string]
    Treating 2-character string as a number
warning: multiple-charmaps.asm(90) -> multiple-charmaps.asm::print_mapped(27): [-Wnumeric-string]
    Treating 2-character string as a number
warning: multiple-charmaps.asm(98) -> multiple-charmaps.asm::print_mapped(27): [-Wnumeric-string]
    Treating 2-character string as a number
error: multiple-charmaps.asm(100) -> multiple-charmaps.asm::new_(7):
    Charmap 'map1' already exists
error: multiple-charmaps.asm(102) -> multiple-charmaps.asm::set_(13):
    Charmap 'map5' doesn't exist
error: multiple-charmaps.asm(104) -> multiple-charmaps.asm::pop_(23):
    No entries in the charmap stack
error: Assembly aborted (3 errors)!
